todo-sqlite working
on an m1 mac at least, it's very annoying because there's a need to delete and re-run npm install when switching from local environment to docker because of differences in node-gyp

need to add `RUN apt-get update && apt-get install build-essential -yqq` to develop.Dockerfile to make it work

have to install better-sqlite3 manually

--- a/examples/ent-rsvp/backend/docker-compose.dev.yml
+++ b/examples/ent-rsvp/backend/docker-compose.dev.yml
@@ -4,13 +4,11 @@ services:
   app:
     build:
       context: .
-      dockerfile:
-        develop.Dockerfile
-        # change to name of your app
+      dockerfile:  develop.Dockerfile
     container_name: ent-rsvp
     ports:
       - 4000:4000
-      - 9229:9229 # for debugger apparently
+      - 9229:9229 # for debugger
     volumes:
       - .:/app:rw,delegated
     environment:
