--- a/examples/simple/docker-compose.dev.yml
+++ b/examples/simple/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
     container_name: example_app
     ports: 
       - 4000:4000
-      - 9229:9229 # for debugger apparently
+      - 9229:9229 # for debugger 
     volumes: 
       - .:/app:rw,delegated
     environment:
