--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -7,11 +7,14 @@
     "test": "tests"
   },
   "scripts": {
+    "test": "jest",
+    "sqlite-test": "docker-compose -f docker-compose.dev.yml run --rm app ./node_modules/jest/bin/jest.js",
     "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "start": "docker-compose -f docker-compose.dev.yml up --build",
-    "init": "docker-compose -f docker-compose.dev.yml run --rm app npm install",
+    "sqlite-init": "docker-compose -f docker-compose.dev.yml run --rm app npm install",
     "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen",
     "upgrade": "docker-compose -f docker-compose.dev.yml run --rm app tsent upgrade",
+    "rebuild-image": "docker-compose -f docker-compose.dev.yml build",
     "start-fast": "npm run compile && node dist/graphql/index.js"
   },
   "author": "",
@@ -30,9 +33,10 @@
     "ts-jest": "^26.5.6"
   },
   "dependencies": {
+    "@snowtop/ent": "^0.0.4",
     "@snowtop/ent-phonenumber": "^0.0.1",
-    "@snowtop/ent": "^0.0.1",
     "@types/node": "^15.0.3",
+    "better-sqlite3": "^7.4.3",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
