--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@types/node": "^15.0.2",
-    "better-sqlite3": "^7.4.1",
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
@@ -29,7 +28,13 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
+    "better-sqlite3": "^7.4.1",
     "graphql": ">= 15.3.0"
+  },
+  "peerDependenciesMeta": {
+    "better-sqlite3":{
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -49,6 +54,7 @@
     "@types/pluralize": "0.0.29",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
+    "better-sqlite3": "^7.4.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
