--- a/ts/packages/ent-email/package.json
+++ b/ts/packages/ent-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-email",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "snowtop ent email datatype",
   "main": "dist/email.js",
   "types": "dist/email.d.ts",
@@ -35,6 +35,7 @@
     "@snowtop/ent": "^0.0.1",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
+    "tar": "^6.1.6",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
