--- a/ts/packages/ent-password/package.json
+++ b/ts/packages/ent-password/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-password",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "password datatype for ents",
   "main": "dist/password.js",
   "types": "dist/password.d.ts",
@@ -36,6 +36,7 @@
     "@types/jest": "^26.0.9",
     "jest": "^26.2.2",
     "password-validator": "^5.1.0",
+    "tar": "^6.1.6",
     "ts-jest": "^26.1.4"
   },
   "peerDependencies": {
