try again with auto updating docs

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -2,9 +2,9 @@ name: Update Docs
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
     paths:
-      - docs
+      - 'docs/**'
 
 jobs:
   merge-branch:
