--- a/examples/simple/docker-compose.dev.yml
+++ b/examples/simple/docker-compose.dev.yml
@@ -11,6 +11,10 @@ services:
       - 9229:9229 # for debugger 
     volumes: 
       - .:/app:rw,delegated
+#      - simple-sync:/app/:nocopy #  nocopy is important
     environment:
       - DB_CONNECTION_STRING=postgres://ola:@host.docker.internal/tsent_test
 
+# volumes:
+#   simple-sync:
+#     external: true
