--- a/ts/package.json
+++ b/ts/package.json
@@ -66,7 +66,8 @@
     "node-sql-parser": "^3.1.0",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^26.5.6",
+    "object-path": ">=0.11.6"
   },
   "scripts": {
     "compile": "tsc",
