--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -13,16 +13,7 @@
     "esModuleInterop": true,
     "experimentalDecorators":true,
     "emitDecoratorMetadata": true,
-    //    "noImplicitAny": true,
-    "paths": {
-      // TODO to make importing of ent easier
-      // "ent/*": ["./"],
-      // "*": ["*"]
-//      "src/*": [
-        // TODO use this and change tsc to use compiler++
-//        "./src/*"
-//      ],
-    },
+    "importHelpers": true,
     "declaration": true,
   },
   "include": ["src/**/*"],
