--- a/ts/package.json
+++ b/ts/package.json
@@ -32,7 +32,7 @@
     "graphql": ">= 15.3.0"
   },
   "peerDependenciesMeta": {
-    "better-sqlite3":{
+    "better-sqlite3": {
       "optional": true
     }
   },
@@ -64,10 +64,10 @@
     "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
     "node-sql-parser": "^3.1.0",
+    "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6",
-    "object-path": ">=0.11.6"
+    "ts-jest": "^26.5.6"
   },
   "scripts": {
     "compile": "tsc",
