set module to commonjs https://www.typescriptlang.org/tsconfig/#module
can now do `tsc` and then `node dist/graphql/index.js`

[skip ci]

--- a/examples/simple/tsconfig.json
+++ b/examples/simple/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "lib": ["es2018", "esnext.asynciterable"],
     "outDir": "./dist",
-    "target": "es2018",
+    "target": "es2020",
     "strictNullChecks": true,
+    "module": "commonjs",
     "downlevelIteration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
