use generated header in example schema

--- a/examples/simple/ent.yml
+++ b/examples/simple/ent.yml
@@ -13,5 +13,6 @@
 #     policyName: 'AlwaysAllowPrivacyPolicy'
 codegen:
   relativeImports: true
+  generatedHeader: "Copyright whaa whaa"
   prettier:
     custom: true
