--- a/ts/package.json
+++ b/ts/package.json
@@ -37,13 +37,16 @@
       "optional": true
     }
   },
+  "engines": {
+    "node": "^16.1.0"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/better-sqlite3": "^5.4.1",
     "@types/express": "^4.17.9",
     "@types/glob": "^7.1.1",
     "@types/graphql-upload": "^8.0.4",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.1",
     "@types/jest-expect-message": "^1.0.1",
     "@types/js-yaml": "^4.0.1",
     "@types/luxon": "^1.25.1",
@@ -60,7 +63,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "graphql-upload": "^12.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.1.1",
     "jest-date-mock": "^1.0.8",
     "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
@@ -68,7 +71,7 @@
     "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^27.0.5"
   },
   "scripts": {
     "compile": "tsc",
