--- a/python/Pipfile
+++ b/python/Pipfile
@@ -9,10 +9,11 @@ autopep8 = ""
 
 [packages]
 alembic = "==1.4.2"
-datetime = "*"
+datetime = "==4.3"
 sqlalchemy = "==1.3.19"
-psycopg2 = "*"
-autopep8 = "*"
+psycopg2 = "==2.8.6"
+autopep8 = "==1.5.4"
+python-dateutil= "==2.8.2"
 
 [requires]
 python_version = "3.8"
