--- a/ts/packages/ent-passport/package.json
+++ b/ts/packages/ent-passport/package.json
@@ -32,15 +32,15 @@
     "@snowtop/ent": ">= 0.0.1"
   },
   "devDependencies": {
-    "@snowtop/ent-graphql-tests": "^0.0.1",
     "@snowtop/ent": "^0.0.1",
+    "@snowtop/ent-graphql-tests": "^0.0.1",
     "@types/express-session": "^1.17.3",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.1",
     "@types/passport-strategy": "^0.2.35",
     "@types/supertest": "^2.0.11",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
-    "jest": "^26.6.3",
+    "jest": "^27.1.1",
     "jest-expect-message": "^1.0.2",
     "pg": "^8.6.0",
     "supertest": "^6.1.3"
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-strategy": "^1.0.0"
+    "passport-strategy": "^1.0.0",
+    "ts-jest": "^27.0.5"
   }
 }
