--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -29,11 +29,10 @@
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.5",
-    "tsconfig-paths": "^3.11.0"
+    "ts-jest": "^27.0.5"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.0.11",
+    "@snowtop/ent": "^0.0.12",
     "@snowtop/ent-email": "^0.0.1",
     "@snowtop/ent-passport": "^0.0.1",
     "@snowtop/ent-password": "^0.0.1",
@@ -57,7 +56,6 @@
     "luxon": "^1.27.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-strategy": "^1.0.0",
-    "uuid": "^8.3.2"
+    "passport-strategy": "^1.0.0"
   }
 }
