--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@alex_neo/jest-expect-message": "^1.0.5",
     "@snowtop/ent-graphql-tests": "^0.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.0.1",
@@ -27,7 +28,6 @@
     "cookie-parser": "^1.4.5",
     "jest": "^27.1.1",
     "jest-date-mock": "^1.0.8",
-    "jest-expect-message": "^1.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.5"
   },
