--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -29,7 +29,8 @@
     "jest": "^27.1.1",
     "jest-date-mock": "^1.0.8",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
     "@snowtop/ent": "^0.0.13",
@@ -56,6 +57,7 @@
     "luxon": "^1.27.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-strategy": "^1.0.0"
+    "passport-strategy": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
