--- a/ts/package.json
+++ b/ts/package.json
@@ -62,6 +62,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "jest": "^27.1.1",
     "jest-date-mock": "^1.0.8",
