--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -51,6 +51,7 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.7.56",
