--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -29,10 +29,11 @@
     "jest": "^27.1.1",
     "jest-date-mock": "^1.0.8",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.0.13",
+    "@snowtop/ent": "^0.0.14",
     "@snowtop/ent-email": "^0.0.1",
     "@snowtop/ent-passport": "^0.0.1",
     "@snowtop/ent-password": "^0.0.1",
@@ -50,12 +51,14 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.7.56",
     "luxon": "^1.27.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-strategy": "^1.0.0"
+    "passport-strategy": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
