--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
     "@snowtop/ent-graphql-tests": "^0.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.0.1",
     "@types/jest-expect-message": "^1.0.3",
@@ -45,12 +46,13 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/passport-strategy": "^0.2.35",
+    "@types/pg": "^8.6.1",
+    "@types/uuid": "^8.3.1",
     "csv-parse": "^4.15.4",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
-    "graphql": "^15.5.0",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
