--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -51,6 +51,9 @@
     "@types/express": "^4.17.9",
     "@types/graphql-upload": "^8.0.4",
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^2.0.4",
+    "@types/passport": "^1.0.7",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.1.1",
     "jest-expect-message": "^1.0.2",
     "ts-jest": "^27.0.5"
