--- a/examples/ent-rsvp/backend/tsconfig.json
+++ b/examples/ent-rsvp/backend/tsconfig.json
@@ -5,16 +5,17 @@
       "esnext.asynciterable"
     ],
     "outDir": "dist",
-    "target": "es2015",
+    "target": "es2020",
     "strictNullChecks": true,
+    "module": "commonjs",
     "downlevelIteration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    // "skipLibCheck": true,
-    // "skipDefaultLibCheck":true,
+    "strict": true,
+    "skipLibCheck": true,
     "paths": {
       "ent/*": [
         "@snowtop/ent/*",
