--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -33,9 +33,10 @@
     "ts-jest": "^27.0.5"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.0.7",
+    "@snowtop/ent": "^0.0.15",
     "@snowtop/ent-phonenumber": "^0.0.1",
     "@types/node": "^15.0.3",
+    "@types/pg": "^8.6.1",
     "better-sqlite3": "^7.4.3",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
