--- a/ts/package.json
+++ b/ts/package.json
@@ -41,6 +41,7 @@
     "node": "^16.1.0"
   },
   "devDependencies": {
+    "@alex_neo/jest-expect-message": "^1.0.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/better-sqlite3": "^5.4.1",
     "@types/express": "^4.17.9",
