--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-models/configs/versions/* linguist-generated=true
-models/configs/schema.py linguist-generated=true
-src/schema/versions/* linguist-generated=true
-src/schema/schema.py linguist-generated=true
+**/models/configs/versions/* linguist-generated=true
+**/models/configs/schema.py linguist-generated=true
+**/src/schema/versions/* linguist-generated=true
+**/src/schema/schema.py linguist-generated=true
 **/generated/** linguist-generated=true
