--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -56,6 +56,7 @@
     "@types/supertest": "^2.0.11",
     "jest": "^27.1.1",
     "jest-expect-message": "^1.0.2",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "tsconfig-paths": "^3.11.0"
   }
 }
