--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -30,7 +30,8 @@
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
     "@snowtop/ent": "^0.0.24",
