--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^15.0.2",
+    "camel-case": "^4.1.2",
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
@@ -30,7 +31,7 @@
   },
   "peerDependencies": {
     "better-sqlite3": "^7.4.1",
-    "graphql": "^15.5"
+    "graphql": "15.5"
   },
   "peerDependenciesMeta": {
     "better-sqlite3": {
@@ -62,7 +63,7 @@
     "better-sqlite3": "^7.4.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.3.0",
+    "graphql": "15.5",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "jest": "^27.1.1",
