--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.0.24",
+  "version": "0.0.27",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -31,7 +31,7 @@
   },
   "peerDependencies": {
     "better-sqlite3": "^7.4.1",
-    "graphql": "15.5"
+    "graphql": "^15.5"
   },
   "peerDependenciesMeta": {
     "better-sqlite3": {
