Revert "improvements to writing files + prettier usage (#639)"
This reverts commit 9a8729fd3976c0b95e3f029167d1033b732c1bab (https://github.com/lolopinto/ent/pull/639)

Esbuild's TypeScript API strips types and so it doesn't do what we want when say a new field is added and the only thing that changes in one file is just the interface declaration showing types

--- a/examples/simple/tsconfig.json
+++ b/examples/simple/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  // TODO eventually generate this from an init step
   "compilerOptions": {
     "lib": ["es2018", "esnext.asynciterable"],
     "outDir": "./dist",
