--- a/.github/workflows/new_docker_image.yml
+++ b/.github/workflows/new_docker_image.yml
@@ -2,7 +2,7 @@ name: New Docker image
 
 on: 
   pull_request:
-    branches: [main]
+    branches: [master]
     paths:
       - ts/Dockerfile.tmpl
       - release_image/**
