--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -111,6 +111,6 @@ jobs:
         run: |
           cd ent-starter
           npm run compile
-          timeout 7 node dist/graphql/index.js
+          timeout --preserve-status 7 node dist/graphql/index.js
         env:
           DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
