--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -68,9 +68,8 @@ jobs:
       with:
         python-version: '>3.6' 
       
-    - name: setup auto_schema
-      run: |
-        alias auto_schema='python3 python/auto_schema/auto_schema/cli/__init__.py'
+    - name: Install auto_schema
+      run: python3 -m pip install wheel auto_schema==0.0.12
 
     - name: Setup nodejs
       uses: actions/setup-node@v2
