--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -35,7 +35,7 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.0.27",
+    "@snowtop/ent": "^0.0.28-alpha.2",
     "@snowtop/ent-phonenumber": "^0.0.1",
     "@types/node": "^15.0.3",
     "@types/pg": "^8.6.1",
