--- a/ts/package.json
+++ b/ts/package.json
@@ -70,6 +70,7 @@
     "jest-date-mock": "^1.0.8",
     "jest-each": "^27.4.2",
     "jest-expect-message": "^1.0.2",
+    "jest-mock": "^27.4.2",
     "node-sql-parser": "^3.1.0",
     "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
