--- a/examples/simple/tsconfig.json
+++ b/examples/simple/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strict": true,
-    "noUnusedLocals": true
+//    "noUnusedLocals": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "tests/**/*"]
