run CI on PRs to v0.1

--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -2,7 +2,7 @@ name: Go CI
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, v0.1 ]
     paths:
       - 'ent/**.go'
       - 'internal/**.go'
