--- a/ts/packages/ent-email/tsconfig.json
+++ b/ts/packages/ent-email/tsconfig.json
@@ -17,6 +17,7 @@
     "emitDecoratorMetadata": true,
     //    "noImplicitAny": true,
     "declaration": true,
+    "skipLibCheck": true,                           /* Skip type checking of declaration files. */
   },
   "include": [
     "src/**/*"
