--- a/ts/packages/ent-email/package.json
+++ b/ts/packages/ent-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-email",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0-alpha1",
   "description": "snowtop ent email datatype",
   "main": "dist/email.js",
   "types": "dist/email.d.ts",
@@ -40,6 +40,6 @@
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@snowtop/ent": ">= 0.1.0"
+    "@snowtop/ent": ">=0.1.0-alpha"
   }
 }
