--- a/ts/packages/ent-password/package.json
+++ b/ts/packages/ent-password/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-password",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0-alpha1",
   "description": "password datatype for ents",
   "main": "dist/password.js",
   "types": "dist/password.d.ts",
@@ -40,6 +40,6 @@
     "ts-jest": "^27.0.5"
   },
   "peerDependencies": {
-    "@snowtop/ent": ">= 0.1.0"
+    "@snowtop/ent": ">=0.1.0-alpha"
   }
 }
