ent-phonenumber also

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -106,7 +106,7 @@ jobs:
       - name: add new field
         run: |
           cd ent-starter
-          npm install @snowtop/ent-phonenumber
+          npm install @snowtop/ent-phonenumber@0.0.x
           cat ../.github/testdata/schema2.json | tsent generate schemas --force
           tsent codegen
         env:
