--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -89,7 +89,7 @@ jobs:
           # clone ent-starter
           git clone https://github.com/lolopinto/ent-starter.git 
           cd ent-starter
-          npm install @snowtop/ent @snowtop/ent-email 
+          npm install @snowtop/ent '@snowtop/ent-email@0.0.x'
           mkdir -p src/schema
           cat ../.github/testdata/schema1.json | tsent generate schemas 
           tsent codegen
@@ -106,7 +106,7 @@ jobs:
       - name: add new field
         run: |
           cd ent-starter
-          npm install @snowtop/ent-phonenumber
+          npm install @snowtop/ent-phonenumber@0.0.x
           cat ../.github/testdata/schema2.json | tsent generate schemas --force
           tsent codegen
         env:
