--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -73,3 +73,5 @@ jobs:
     - name: run test suite
       run: |
         pipenv run pytest -svv
+      env: 
+        DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432'
