--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -74,4 +74,4 @@ jobs:
       run: |
         pipenv run pytest -svv
       env: 
-        DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
+        DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432'
