--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,7 +73,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - run: npm install -g ts-node prettier typescript
+      - run: npm install -g ts-node prettier typescript @swc/core @swc/cli
       - run: |
           cd ts 
           npm ci
