update todo to use snake_case for fields
we want an example showing this

--- a/examples/todo-sqlite/ent.yml
+++ b/examples/todo-sqlite/ent.yml
@@ -2,3 +2,4 @@ codegen:
   disableBase64Encoding: true
   generateRootResolvers: true
   defaultGraphQLMutationName: VERB_NOUN
+  defaultGraphQLFieldFormat: snake_case
