account for ent.yml changes which may cause schema changes which change files
if ent.yml is changed which can cause a file to be deleted (e.g. graphql mutation name change), we want to delete that file

important if changing from noun_verb to verb_noun or vice versa for mutations

related: https://github.com/lolopinto/ent/pull/816 and https://github.com/lolopinto/ent/pull/819

--- a/examples/todo-sqlite/ent.yml
+++ b/examples/todo-sqlite/ent.yml
@@ -1,5 +1,5 @@
 codegen:
   disableBase64Encoding: true
   generateRootResolvers: true
-  defaultGraphQLMutationName: VERB_NOUN
+  defaultGraphQLMutationName: VerbNoun
   defaultGraphQLFieldFormat: snake_case
