option to parse custom graphql from json
because of swc bugs, we can't use decorators if swc/jest is being used in a project even if we're not (currently) using swc for custom graphql since tests start failing

workaround is to create a simplified json api that doesn't quite support the full API but supports just enough to gather the core data

hopefully, this is temporary and swc issues are fixed soon

--- a/examples/simple/ent.yml
+++ b/examples/simple/ent.yml
@@ -11,6 +11,7 @@
 #   defaultActionPolicy:
 #     path: '@snowtop/ent'
 #     policyName: 'AlwaysAllowPrivacyPolicy'
+customGraphQLJSONPath: "src/schema/custom_graphql.json"
 codegen:
   relativeImports: true
   generatedHeader: "Copyright whaa whaa"
