--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@snowtop/ent": "^0.0.39-alpha5",
     "@snowtop/ent-phonenumber": "^0.0.1",
-    "@snowtop/ent-soft-delete": "^0.0.1-alpha2",
+    "@snowtop/ent-soft-delete": "^0.0.1",
     "@types/node": "^15.0.3",
     "@types/pg": "^8.6.1",
     "better-sqlite3": "^7.4.3",
