some config changes
* add `--sql` flag to `upgrade`
e.g.  `LOCAL_AUTO_SCHEMA=true tsent upgrade a5184ce57a3b:42b21a3bccc5 --sql`. references https://github.com/lolopinto/ent/pull/838
* add config option to get the `schema.sql` file
from the `--all-sql` option from https://github.com/lolopinto/ent/pull/838
created new auto_schema option so we don't have to call into python multiple times

misc:
* handled issue with https://github.com/lolopinto/ent/issues/763. didn't actually fix it
* handled db changes not respecting `--write-all`

--- a/examples/simple/ent.yml
+++ b/examples/simple/ent.yml
@@ -17,3 +17,5 @@ codegen:
   generatedHeader: "Copyright whaa whaa"
   prettier:
     custom: true
+  schemaSQLFilePath: "src/schema/schema.sql"
+  
