templatize viewer options

--- a/examples/simple/ent.yml
+++ b/examples/simple/ent.yml
@@ -18,4 +18,6 @@ codegen:
   prettier:
     custom: true
   schemaSQLFilePath: "src/schema/schema.sql"
-
+  templatizedViewer:
+    path: src/viewer/viewer
+    name: ExampleViewer
