fix delete schema command
instead of trying to parse the code and create a new schema, just delete the schema from the map we have and rerun codegen

ran manually + add to e2e test

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -134,3 +134,8 @@ jobs:
           timeout --preserve-status 7 node dist/graphql/index.js
         env:
           DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
+
+      - name: delete schema
+        run: |
+          cd ent-starter
+          tsent delete_schema Contact --disable_prompts
