update example to use it

--- a/examples/simple/ent.yml
+++ b/examples/simple/ent.yml
@@ -21,3 +21,5 @@ codegen:
   templatizedViewer:
     path: src/viewer/viewer
     name: ExampleViewer
+    # this is just to show that it works and fine with example code looking 👀
+    alias: ExampleViewerAlias
