--- a/examples/ent-rsvp/backend/Dockerfile
+++ b/examples/ent-rsvp/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM ghcr.io/lolopinto/ent:0.0.30-nodejs-16-slim
+FROM ghcr.io/lolopinto/ent:0.1.0-alpha.12-nodejs-17-dev
+# TODO ^ should be slim 
 
 WORKDIR /app
 
