--- a/ts/Dockerfile
+++ b/ts/Dockerfile
@@ -11,7 +11,8 @@ ENV GOPATH=$HOME/go
 ENV GOBIN $GOPATH/bin
 ENV PATH $PATH:$GOPATH/bin
 ARG TARGETOS TARGETARCH
-RUN -mount=target=. \
+# TODO go install works on its own but not the mounts with "read-only file system"
+RUN --mount=target=. \
   --mount=type=cache,target=/root/.cache/go-build \
   --mount=type=cache,target=/go/pkg \
   GOOS=$TARGETOS GOARCH=$TARGETARCH go install -ldflags="-X 'github.com/lolopinto/ent/internal/build_info.DockerVersion=$DOCKER_TAG' -X 'github.com/lolopinto/ent/internal/build_info.Time=$(date)'" github.com/lolopinto/ent/tsent@$GOLANG_VERSION
