--- a/examples/todo-sqlite/ent.yml
+++ b/examples/todo-sqlite/ent.yml
@@ -8,4 +8,4 @@ codegen:
   customAssocEdgePath:
     path: 'src/ent/edge/custom_edge.ts'
     name: 'CustomTodoEdge'
-
+  schemaSQLFilePath: 'src/schema/schema.sql'
