--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha89-450945e0-3878-11ed-8d1a-754d6ec0e88d",
+  "version": "0.1.0-alpha90",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
