--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -118,7 +118,7 @@ jobs:
         run: |
           cd ent-starter
           cp ../.github/testdata/user.ts.example src/ent/user.ts
-          tsent codegen
+          tsent codegen --write-all
           cp ../.github/testdata/jest.config.js.example jest.config.js
           cp ../.github/testdata/verify_graphql_schema.test.ts.example src/verify_graphql_schema.test.ts
           npm install ts-jest jest @types/jest
