--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -118,6 +118,8 @@ jobs:
         run: |
           cd ent-starter
           cp ../.github/testdata/user.ts.example src/ent/user.ts
+          ls -la src/graphql/generated 
+          ls -la src/graphql/generated/mutations
           tsent codegen --write-all
           cp ../.github/testdata/jest.config.js.example jest.config.js
           cp ../.github/testdata/verify_graphql_schema.test.ts.example src/verify_graphql_schema.test.ts
